amf-cli/shared/src/test/resources/parser-results/raml/error/invalid-jsonschema-includes/schemas/put-application-deprecated.schema
{
  "$schema": "http://json-schema.org/draft-04/schema#",
  "type": "object",
  "description": "CloudHub Application Update Deployment Information\n Please note that this schema for this endpoint is deprecated, use multipart/form-data endpoint or request with application source instead",
  "allowAdditionalProperties": false
}